--- a/ProyectoTD2022.Rmd
+++ b/ProyectoTD2022.Rmd
@@ -1,67 +1,93 @@
 ---
 title: "ProyectoTD2022"
-output: html_notebook
-author: " Carles Vicent Adam Castañer, Ana González Mandler, Arnau Monzó Ferragut, Ivan Alexandrov y Amparo Galvez Vilar"
+author: ' Carles Vicent Adam Castañer, Ana González Mandler, Arnau Monzó Ferragut,
+  Ivan Alexandrov y Amparo Galvez Vilar. GRUPO F'
+output:
+  html_document:
+    df_print: paged
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code.
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*.
+Lo primero que haremos será llamar a todas las librerías necesarias que vamos a utilizar en este trabajo.
 
 ```{r}
-#Lo primero que haremos será llamar a todas las librerías necesarias que vamos a utilizar en este trabajo
+
 library(tidyr)
 library(dplyr)
-
-
-#Posteriormente cargamos los 14 ficheros de datos 
-df1 <- read.csv("data/D1.csv")
-df2 <- read.csv("data/D2.csv")
-df3 <- read.csv("data/D3.csv")
-df4 <- read.csv("data/D4.csv")
-df5 <- read.csv("data/D5.csv")
-df6 <- read.csv("data/D6.csv")
-df7<- read.csv("data/D7.csv")
-df8 <- read.csv("data/D8.csv")
-df9 <- read.csv("data/D9.csv")
-df10 <- read.csv("data/D10.csv")
-df11 <- read.csv("data/D11.csv")
-df12 <- read.csv("data/D12.csv")
-df13 <- read.csv("data/D13.csv")
-df14 <- read.csv("data/D14.csv")
-
-
-#Fusionamos los datos en un único data frame
-df <- df1 %>% union_all(df2) %>% union_all(df3) %>% union_all(df4) %>%union_all(df5) %>%union_all(df6) %>%union_all(df7) %>%union_all(df8) %>%union_all(df9) %>%union_all(df10) %>%union_all(df11) %>%
-union_all(df12) %>%union_all(df13) %>%union_all(df14)
-
-#Acondicionamos los datos para que se correspondan con un tidy dataset.
-df <- df %>% pivot_longer(cols = starts_with("LA"), names_to = "Periodo", values_to = "Valores", names_prefix = "/")
-
-df$dateObserved <- as.Date(df$dateObserved)
-
-#Eliminamos columnas que son irrelevantes para este proyecto
-df <- df %>% select(-c(ï.._id, fiwareServicePath, entityType))
-
-#Cambiamos el nombre de las columnas recvTime y dateObservation para que sea mas fácil realizar las siguientes operaciones.
-df <- df %>% rename(FechaEnvio = recvTime) %>% rename(FechaObservacion = dateObserved) %>% rename(IdEntidad = entityId)
-
-#A continuacíon hemos planteado 7 preguntas las cuales más adelante responderemos.
+library(stringr)
 
 ```
 
+Posteriormente cargamos los 14 ficheros de datos
+
+```{r}
+files <- list.files(path = "data/", full.names = T, pattern = "csv", recursive = TRUE)
+
+```
+
+Fusionamos los datos en un único data frame
+
+```{r}
+for (file in files){
+
+      
+
+  # if the merged dataset doesn't exist, create it
+
+  if (!exists("dataset")){
+
+    dataset <- read.table(file, header=TRUE, sep=",")
+
+  }
+
+  
+
+  # if the merged dataset does exist, append to it
+
+  if (exists("dataset")){
+
+    temp_dataset <-read.table(file, header=TRUE, sep=",")
+
+    dataset<-rbind(dataset, temp_dataset)
+
+    rm(temp_dataset)
+
+  }
+
+}
+```
+
+Acondicionamos los datos para que se correspondan con un tidy dataset.
+
+```{r}
+df <- dataset %>% pivot_longer(cols = starts_with("LA"), names_to = "Periodo", values_to = "Valores", names_prefix = "/")
+
+df$dateObserved <- as.Date(df$dateObserved)
+```
+
+Eliminamos columnas que son irrelevantes para este proyecto
+
+```{r}
+df <- df %>% select(-c(ï.._id, fiwareServicePath, entityType, recvTime))
+
+```
+
+Cambiamos el nombre de las columnas recvTime y dateObservation para que sea mas fácil realizar las siguientes operaciones.
+
+```{r}
+df <- df %>% rename(FechaObservacion = dateObserved) %>% rename(IdEntidad = entityId)
+
+```
+
+A continuacíon hemos planteado 7 preguntas las cuales más adelante responderemos.
+
 ## PREGUNTAS PROPUESTAS
 
-1.  ¿Que calle es la mas ruidsosa? ¿Y la que menos?
+1.  ¿Que calle es la mas ruidosa? ¿Y la que menos?
 
-2.  ¿A que hora hay el mayor y menor índice de ruido?
+2.  ¿Que mes del año tiene el maximo indice de ruido? ¿Y el minimo?
 
-3.  ¿Que relación podrías extraer de la pregunta anterior?
+3.  Calcula la media de los dos meses del anterior apartado.
 
-4.  ¿Que mes del año tiene el maximo indice de ruido? ¿Y el minimo?
+4.  ¿Como afecto el confinamiento?
 
-5.  Calcula la media de los dos meses del anterior apartado.
-
-6.  ¿Como afecto el confinamiento?
-
-7.  ¿Como varía el ruido en función de la hora?
+5.  ¿Como varía el ruido dependiendo de si es lunes o sábado?
